Not working, just saving

--- a/app/src/main/res/layout/tasklist_item.xml
+++ b/app/src/main/res/layout/tasklist_item.xml
@@ -7,6 +7,9 @@
     <TextView
         android:id="@+id/task"
         style="@style/task_title">
-
+    </TextView>
+    <TextView
+        android:id="@+id/taskdescription"
+        style="@style/task_title">
     </TextView>
 </LinearLayout>
